k8s/applications/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  selector:
    matchLabels:
      app: sonarr
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: sonarr
          image: ghcr.io/linuxserver/sonarr:4.0.17
          ports:
            - name: ingress
              containerPort: 8989
          volumeMounts:
            - name: sonarr
              mountPath: /config
            - name: libraries
              mountPath: /tv
              subPath: tv/sd
            - name: libraries
              mountPath: /tv-requested
              subPath: tv/requested
            - name: applications
              mountPath: /trash
              subPath: trash
            - name: applications
              mountPath: /data
              subPath: qbittorrent
      volumes:
        - name: sonarr
          persistentVolumeClaim:
            claimName: sonarr
        - name: applications
          persistentVolumeClaim:
            claimName: applications
        - name: libraries
          persistentVolumeClaim:
            claimName: libraries
      resources:
        limits:
          memory: 512Mi
        requests:
          cpu: 10m
          memory: 512Mi
