k8s/applications/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-lb
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.85
spec:
  type: LoadBalancer
  selector:
    app: sonarr
  ports:
    - name: ingress
      port: 80
      targetPort: ingress
